--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,8 +1,17 @@
 <idea-plugin>
   <id>com.intellij.plugins.vscodekeymap</id>
   <name>VS Code Keymap</name>
-  <version>1.0.1</version>
+  <version>1.0.2</version>
   <vendor email="kb@jetbrains.com" url="http://www.jetbrains.com">JetBrains</vendor>
+
+  <change-notes>
+    <![CDATA[
+    <ul>
+      <li>Fixed TAB in editor</li>
+      <li>Fixed shortcut for Close Content action</li>
+    </ul>
+    ]]>
+  </change-notes>
 
   <description>
     VS Code Keymap for IntelliJ-based IDEs: IntelliJ IDEA, WebStorm, PhpStorm, and others
